force-app/main/default/objects/Employee1__c/Employee1__c.object-meta.xml
<CustomObject>
    <label>社員マスタ</label>
    <nameField>
        <displayFormat>No-{000000}</displayFormat>
        <label>社員NO</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>