force-app/main/default/objects/Employee1__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>住所１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>