force-app/main/default/objects/Employee1__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>住所２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>