force-app/main/default/objects/Employee1__c/fields/AddressCD__c.field-meta.xml
<CustomField>
    <fullName>AddressCD__c</fullName>
    <label>住所CD</label>
    <length>80</length>
    <type>Text</type>
</CustomField>