force-app/main/default/objects/Employee1__c/fields/AnkenEndDate__c.field-meta.xml
<CustomField>
    <fullName>AnkenEndDate__c</fullName>
    <label>案件終了日</label>
    <type>Date</type>
</CustomField>