force-app/main/default/objects/Employee1__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>誕生日</label>
    <type>Date</type>
</CustomField>