force-app/main/default/objects/Employee1__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>所属部門</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>社員マスタ</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>