force-app/main/default/objects/Employee1__c/fields/EvaluationInfo__c.field-meta.xml
<CustomField>
    <fullName>EvaluationInfo__c</fullName>
    <label>評価情報</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>