force-app/main/default/objects/Employee1__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <label>メール</label>
    <required>true</required>
    <type>Email</type>
</CustomField>