force-app/main/default/objects/Employee1__c/fields/NyusyaDate__c.field-meta.xml
<CustomField>
    <fullName>NyusyaDate__c</fullName>
    <label>入社年月日</label>
    <type>Date</type>
</CustomField>