force-app/main/default/objects/Employee1__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>役職</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>プログラマー</fullName>
            </value>
            <value>
                <fullName>システムエンジニア</fullName>
            </value>
            <value>
                <fullName>リーダー</fullName>
            </value>
            <value>
                <fullName>マネジャ</fullName>
            </value>
            <value>
                <fullName>事務担当</fullName>
            </value>
            <value>
                <fullName>採用担当</fullName>
            </value>
            <value>
                <fullName>営業担当</fullName>
            </value>
            <value>
                <fullName>部長</fullName>
            </value>
            <value>
                <fullName>社長</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>