force-app/main/default/objects/Employee1__c/fields/ShimeiKanji__c.field-meta.xml
<CustomField>
    <fullName>ShimeiKanji__c</fullName>
    <label>氏名（漢字）</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>