force-app/main/default/objects/Employee1__c/fields/ShimeiKatakana__c.field-meta.xml
<CustomField>
    <fullName>ShimeiKatakana__c</fullName>
    <label>氏名（カタカナ）</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>