force-app/main/default/objects/Employee1__c/fields/TaisyokuDate__c.field-meta.xml
<CustomField>
    <fullName>TaisyokuDate__c</fullName>
    <label>退職年月日</label>
    <type>Date</type>
</CustomField>