force-app/main/default/objects/Employee1__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>郵便番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>