force-app/main/default/objects/Employee1__c/validationRules/chk_Employee_InputRule01.validationRule-meta.xml
<ValidationRule>
    <fullName>chk_Employee_InputRule01</fullName>
    <active>true</active>
    <errorConditionFormula>NOT REGEX(ShimeiKanji__c, &quot;[^\\x00-\\xFF｡-ﾟ]*&quot;)</errorConditionFormula>
    <errorDisplayField>ShimeiKanji__c</errorDisplayField>
    <errorMessage>氏名（漢字）は全角文字を入力してください。</errorMessage>
</ValidationRule>