force-app/main/default/objects/Employee1__c/validationRules/chk_Employee_InputRule02.validationRule-meta.xml
<ValidationRule>
    <fullName>chk_Employee_InputRule02</fullName>
    <active>true</active>
    <errorConditionFormula>NOT REGEX(ShimeiKatakana__c, &quot;[^\\x00-\\xFF｡-ﾟ]*&quot;)</errorConditionFormula>
    <errorDisplayField>ShimeiKatakana__c</errorDisplayField>
    <errorMessage>氏名（カタカナ）は全角カタカナ文字を入力してください。</errorMessage>
</ValidationRule>