force-app/main/default/objects/Employee1__c/validationRules/chk_Employee_InputRule03.validationRule-meta.xml
<ValidationRule>
    <fullName>chk_Employee_InputRule03</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(TaisyokuDate__c)), NyusyaDate__c &gt; TaisyokuDate__c)</errorConditionFormula>
    <errorMessage>入社年月日＞退職年月日のため、データを保存できません。</errorMessage>
</ValidationRule>