force-app/main/default/objects/Employee1__c/validationRules/chk_Employee_InputRule04.validationRule-meta.xml
<ValidationRule>
    <fullName>chk_Employee_InputRule04</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISNULL(TaisyokuDate__c)), 
NOT(ISNULL(AnkenEndDate__c)), 
AnkenEndDate__c &gt; TaisyokuDate__c 
)</errorConditionFormula>
    <errorMessage>案件終了年月日＞退職年月日のため、データを保存できません。</errorMessage>
</ValidationRule>